--- a/Hangman/Let’s play a game/task-info.yaml
+++ b/Hangman/Let’s play a game/task-info.yaml
@@ -90,5 +90,8 @@ files:
         HangmanTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/69/stages/373/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 21 Oct 2022 10:55:26 UTC
 record: -1
