--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/225053/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Sun, 23 Oct 2022 08:39:15 UTC
+update_date: Mon, 24 Oct 2022 13:58:38 UTC
 stages:
 - id: 372
   step: 6082
@@ -16,7 +16,7 @@ stages:
   is_completed: true
 - id: 375
   step: 6085
-  is_completed: false
+  is_completed: true
 - id: 376
   step: 6086
   is_completed: false
