6 of 8 stages completed

--- a/Hangman/The value of life/task-info.yaml
+++ b/Hangman/The value of life/task-info.yaml
@@ -667,5 +667,8 @@ files:
         HangmanTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/6087#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sat, 29 Oct 2022 07:55:36 UTC
 record: -1
