7 of 8 stages completed

--- a/Hangman/Error/task-info.yaml
+++ b/Hangman/Error/task-info.yaml
@@ -745,5 +745,8 @@ files:
         HangmanTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/6088#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sun, 30 Oct 2022 08:06:41 UTC
 record: -1
