--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/225053/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 27 Oct 2022 06:33:45 UTC
+update_date: Sun, 30 Oct 2022 07:39:49 UTC
 stages:
 - id: 372
   step: 6082
@@ -25,7 +25,7 @@ stages:
   is_completed: true
 - id: 378
   step: 6088
-  is_completed: false
+  is_completed: true
 - id: 379
   step: 6089
   is_completed: false
