--- a/Hangman/Menu, please/task-info.yaml
+++ b/Hangman/Menu, please/task-info.yaml
@@ -7,6 +7,14 @@ files:
 - name: tests.py
   visible: false
   text: |
+    from test.tests import HangmanTest
+
+    if __name__ == '__main__':
+        HangmanTest('hangman.hangman').run_tests()
+  learner_created: false
+- name: test/tests.py
+  visible: false
+  text: |
     import re
     from typing import List
 
@@ -878,6 +886,13 @@ files:
     if __name__ == '__main__':
         HangmanTest('hangman.hangman').run_tests()
   learner_created: false
+- name: test/__init__.py
+  visible: false
+  learner_created: false
 feedback_link: https://hyperskill.org/learn/step/6089#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Tue, 01 Nov 2022 08:01:50 UTC
 record: -1
